# domains-webcaf

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-feature-tests  Makefile  README.md  behave.ini  docker-compose.feature-tests.yml  docker-compose.yml  gunicorn_conf.py  local-init.sh  manage.py  pyproject.toml
.hooks/: mypy-wrapper.sh
django_govuk/: asgi.py  settings.py  urls.py  wsgi.py
docs/: DESIGN_DIAGRAM.md  MANAGING_CUTOFF_DATES.md  ORGANISATION_CSV_IMPORT.md
end-to-end-tests/: test_example.py
features/: README.md  admin-login.feature  assesor-login.feature  assessment_workflow.feature  assessor_review_assessment.feature  cyber_advisor_creating_systems.feature  environment.py  error_messages.feature  login_with_profile.feature  login_without_profile.feature  organisation_lead_create_edit_user.feature  organisation_lead_edit_organisation.feature  organisation_lead_remove_user.feature  organisation_lead_setup_draft_assessment.feature  organisation_lead_submit_assessment.feature  organisation_user_actions.feature  organisation_user_edit_organisation.feature  util.py
frameworks/: README.md  add-ncsc-index.py  caf32-reindex.py  create-schema.py  cyber-assessment-framework-v3.2.yaml  cyber-assessment-framework-v4.0.md  cyber-assessment-framework-v4.0.yaml  reduce-line-length.py
oauth-stub/: config.yaml
testapp/: apps.py
tests/: settings.py  test.xlsx  test_assessment_completion.py  test_assessment_does_not_exist_middleware.py  test_assessment_not_selected_middleware.py  test_assessment_required_decorator.py  (+23 more)
(+309 files in other folders)
