[project]
name = "django-govuk"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (==5.1.9)",
    "crispy-forms-gds (>=2.0.1,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-csp (>=4.0,<5.0)",
    "govuk-frontend-django (==0.15.1)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.3.0"
ipdb = "^0.13.13"
web-pdb = "^1.6.2"
types-markdown = "^3.6.0.20240316"
parameterized = "^0.9.0"
mypy = "^1.15.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
pypdf = "^5.6.0"

[tool.isort]
profile = "black"

[tool.black]
# https://gds-way.cloudapps.digital/manuals/programming-languages/python/python.html#maximum-line-length-of-120-characters
line-length = 120

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
plugins = ['mypy_django_plugin.main']

[tool.django-stubs]
django_settings_module = "webcaf.settings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
